fix box collapse on mobile

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -50,3 +50,10 @@
   padding: 20px;	
 	
 }
+
+@media(max-width: 767px) {
+  .custom-columns {
+    flex-direction: column-reverse;
+    display: flex;
+  }
+}
